--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+  margin: 0;
+  color: white;
+}
+
+@font-face {
+  font-display: swap;
+  font-family: "Noto Sans";
+  font-style: normal;
+  font-weight: 400;
+  src: url("assets/fonts/noto-sans-v42-latin-regular.woff2") format("woff2");
+}
+
+.fontNatoSans {
+  font-family: "Noto Sans";
+}
