feat: restructure landing page layout and enhance navbar styles

--- a/src/app/landingPage/navbar/navbar.component.scss
+++ b/src/app/landingPage/navbar/navbar.component.scss
@@ -27,6 +27,10 @@ a {
 }
 
 .phone-div {
+  background-color: #991c1c;
+  border-radius: 6px;
+  border: solid 3px;
+  padding: 4px;
   > a img {
     height: 23px;
     width: 23px;
