--- a/src/app/landingPage/landingPage.component.scss
+++ b/src/app/landingPage/landingPage.component.scss
@@ -1,20 +1,21 @@
-h1 {
-  font-size: 32px;
-}
-
-h2 {
-  font-size: 16px;
-}
-
 section {
   height: 100vh;
-  width: 100%;
   background-image: url(./../../assets/img/1_hero/JPG/hero_bg.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   flex-direction: column;
   align-items: center;
+  > div {
+    text-align: center;
+    margin-bottom: 18em;
+  }
+  > h1 {
+    font-size: 32px;
+  }
+  > h2 {
+    font-size: 16px;
+  }
 }
