--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-landingPage></app-landingPage>
-
+<app-maincontent></app-maincontent>
+<app-footer></app-footer>
 <router-outlet></router-outlet>
