--- a/src/app/main-content/landing-page/landingPage.component.scss
+++ b/src/app/main-content/landing-page/landingPage.component.scss
@@ -1,6 +1,6 @@
 section {
   height: 100vh;
-  background-image: url(./../../assets/img/1_hero/JPG/hero_bg.jpg);
+  background-image: url(./../../../assets/img/1_hero/JPG/hero_bg.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -8,6 +8,7 @@ section {
   justify-content: space-between;
   flex-direction: column;
   align-items: center;
+  color: white;
   > div {
     text-align: center;
     margin-bottom: 18em;
