--- a/src/app/main-content/landing-page/navbar/navbar.component.html
+++ b/src/app/main-content/landing-page/navbar/navbar.component.html
@@ -8,14 +8,17 @@
       <li><a href="">Menu</a></li>
       <li><a href="">Location</a></li>
       <li><a href="">About</a></li>
-    </ul>
 
-    <div class="phone-div">
-      <a href="">
-        <img src="./../../../assets/img/1_hero/PNG/phone.png" alt="" />
-        0176 54564534
-      </a>
-    </div>
+      <div class="phone-div">
+        <a href="">
+          <img
+            src="./../../../assets/img/1_hero/PNG/phone.png"
+            alt=" call phone"
+          />
+          0176 54564534
+        </a>
+      </div>
+    </ul>
 
     <img src="./../../../assets/img/1_hero/PNG/german.png" alt="german flag" />
     <img
