feat: remove Find Us At component and update main content structure

--- a/src/app/main-content/maincontent.component.html
+++ b/src/app/main-content/maincontent.component.html
@@ -1,4 +1,3 @@
-<app-landingPage></app-landingPage>
-<app-how-to-order></app-how-to-order>
-<app-ourmenu></app-ourmenu>
-<app-find-us-at></app-find-us-at>
+<app-landingPage id="landingPage"></app-landingPage>
+<app-how-to-order id="HowToOrder"></app-how-to-order>
+<app-ourmenu id="OurMenu"></app-ourmenu>
