--- a/src/app/main-content/landing-page/navbar/navbar.component.html
+++ b/src/app/main-content/landing-page/navbar/navbar.component.html
@@ -5,7 +5,7 @@
   />
   <div class="language-setting">
     <ul>
-      <li><a href="">Menu</a></li>
+      <li><a href="#OurMenu">Menu</a></li>
       <li><a href="">Location</a></li>
       <li><a href="">About</a></li>
 
